[aliases]
make = sdist

[metadata]
name = ya_ma
#version = # Set in setup.py
description = YANDEX transport API client library
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Askarov Rishat Ramilovich
author_email =  rishatik92@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/rishatik92/ya_ma

keywords =
    pypi
    yandex transport
    packages
    pip

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution
    Topic :: Text Processing :: Markup :: HTML

project_urls =
    Source Code = https://github.com/rishatik92/ya_ma
    Bug Tracker = https://github.com/rishatik92/ya_ma/issues
    Say Thanks! = https://saythanks.io/to/rishatik92

[options]
py_modules = ya_ma
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, <4
install_requires =
    requests >= 2